// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text bg and backgroundColor props sets background-color 1`] = `
.c0 {
  background-color: #f68013;
  color: #001833;
}

<div
  className="c0"
/>
`;

exports[`Text bg and backgroundColor props sets background-color 2`] = `
.c0 {
  background-color: #f68013;
  color: #001833;
}

<div
  className="c0"
/>
`;

exports[`Text bg prop sets background-color 1`] = `
.c0 {
  background-color: #f68013;
  color: #001833;
}

<div
  className="c0"
/>
`;

exports[`Text bold prop sets font-weight 1`] = `
.c0 {
  color: #001833;
  font-weight: 700;
}

<div
  className="c0"
/>
`;

exports[`Text caps prop sets text-transform 1`] = `
.c0 {
  color: #001833;
  text-transform: uppercase;
}

<div
  className="c0"
/>
`;

exports[`Text display and overflow 1`] = `
.c0 {
  color: #001833;
  display: inline-block;
  overflow: none;
}

<div
  className="c0"
  display="inline-block"
  overflow="none"
/>
`;

exports[`Text height and width 1`] = `
.c0 {
  color: #001833;
  height: 150px;
  width: 200px;
}

<div
  className="c0"
  height={150}
  width={200}
/>
`;

exports[`Text min/max values 1`] = `
.c0 {
  color: #001833;
  max-height: 400px;
  max-width: 400px;
  min-height: 200px;
  min-width: 200px;
}

<div
  className="c0"
/>
`;

exports[`Text mt prop sets margin-top 1`] = `
.c0 {
  color: #001833;
  margin-top: 8px;
}

<div
  className="c0"
/>
`;

exports[`Text regular prop sets font-weight 1`] = `
.c0 {
  color: #001833;
  font-weight: 500;
}

<div
  className="c0"
/>
`;

exports[`Text renders 1`] = `
.c0 {
  color: #001833;
}

<div
  className="c0"
/>
`;

exports[`Text textAlign prop sets text-align 1`] = `
.c0 {
  color: #001833;
  text-align: center;
}

<div
  className="c0"
/>
`;
